tests/src/snapshots/pluma_tests__parse_success__def_one_part_two_args.snap
---
source: tests/src/parse_success.rs
expression: "def hello (String, Int) {\n  a, b => \"wow!\"\n}"
---

=== Source ===
def hello (String, Int) {
  a, b => "wow!"
}

=== Tokens ===
[
    KeywordDef(
        0,
        3,
    ),
    Identifier(
        4,
        9,
    ),
    LeftParen(
        10,
        11,
    ),
    Identifier(
        11,
        17,
    ),
    Comma(
        17,
        18,
    ),
    Identifier(
        19,
        22,
    ),
    RightParen(
        22,
        23,
    ),
    LeftBrace(
        24,
        25,
    ),
    LineBreak(
        25,
        26,
    ),
    Identifier(
        28,
        29,
    ),
    Comma(
        29,
        30,
    ),
    Identifier(
        31,
        32,
    ),
    DoubleArrow(
        33,
        35,
    ),
    StringLiteral(
        37,
        41,
    ),
    LineBreak(
        42,
        43,
    ),
    RightBrace(
        43,
        44,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        44,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                44,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        44,
                    ),
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        23,
                                    ),
                                    kind: Tuple(
                                        [
                                            TypeExprNode {
                                                pos: (
                                                    11,
                                                    17,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            11,
                                                            17,
                                                        ),
                                                        name: "String",
                                                        generics: [],
                                                    },
                                                ),
                                            },
                                            TypeExprNode {
                                                pos: (
                                                    19,
                                                    22,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            19,
                                                            22,
                                                        ),
                                                        name: "Int",
                                                        generics: [],
                                                    },
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ),
                        ],
                    },
                    return_type: None,
                    generic_type_constraints: [],
                    params: [
                        IdentifierNode {
                            pos: (
                                28,
                                29,
                            ),
                            name: "a",
                        },
                        IdentifierNode {
                            pos: (
                                31,
                                32,
                            ),
                            name: "b",
                        },
                    ],
                    body: [
                        StatementNode {
                            pos: (
                                37,
                                41,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        37,
                                        41,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                37,
                                                41,
                                            ),
                                            kind: Str(
                                                "wow!",
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

