tests/src/snapshots/pluma_tests__parse_success__def_return_type.snap
---
source: tests/src/parse_success.rs
expression: "def hello () -> String {\n  a => \"wow!\"\n}"
---

=== Source ===
def hello () -> String {
  a => "wow!"
}

=== Tokens ===
[
    KeywordDef(
        0,
        3,
    ),
    Identifier(
        4,
        9,
    ),
    LeftParen(
        10,
        11,
    ),
    RightParen(
        11,
        12,
    ),
    Arrow(
        13,
        15,
    ),
    Identifier(
        16,
        22,
    ),
    LeftBrace(
        23,
        24,
    ),
    LineBreak(
        24,
        25,
    ),
    Identifier(
        27,
        28,
    ),
    DoubleArrow(
        29,
        31,
    ),
    StringLiteral(
        33,
        37,
    ),
    LineBreak(
        38,
        39,
    ),
    RightBrace(
        39,
        40,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        40,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                40,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        40,
                    ),
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        12,
                                    ),
                                    kind: EmptyTuple,
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: Some(
                        TypeExprNode {
                            pos: (
                                16,
                                22,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        16,
                                        22,
                                    ),
                                    name: "String",
                                    generics: [],
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                    generic_type_constraints: [],
                    params: [
                        IdentifierNode {
                            pos: (
                                27,
                                28,
                            ),
                            name: "a",
                        },
                    ],
                    body: [
                        StatementNode {
                            pos: (
                                33,
                                37,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        33,
                                        37,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                33,
                                                37,
                                            ),
                                            kind: Str(
                                                "wow!",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

